--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -66,6 +66,9 @@
 			overflow: hidden;
 		}
 	}
+	.spacer {
+		flex: 1;
+	}
 	.edit.hidden {
 		left: 90px;
 	}
@@ -93,32 +96,32 @@
 		align-items: center;
 		gap: 64px;
 		padding: 0 48px 0 16px;
-		opacity: 0;
 		color: var(--mat-app-text-color, inherit);
 		font-size: 1rem;
 		font-weight: normal;
-		transition: opacity 0.5s;
 		@media screen and (min-width: $small-breakpoint) {
 			gap: 32px;
-		}
-		&.visible {
-			opacity: 1;
-			transition: opacity 0.5s 0.4s;
 		}
 		.collapsed-left-text {
 			flex: none;
 			width: 6.56rem;
 		}
+		.collapsed-left-text,
 		.collapsed-right-text {
 			white-space: nowrap;
 			text-overflow: ellipsis;
-			overflow: hidden;
+			transition: opacity 0.5s;
+			&.hidden {
+				opacity: 0;
+			}
+			&:not(.hidden) {
+				overflow: hidden;
+			}
 		}
 	}
 }
 
 .body {
-	display: grid;
 	grid-template-columns: 1fr auto;
 	gap: 32px;
 	width: 100%;
@@ -126,6 +129,11 @@
 	max-height: 250px;
 	background: var(--card-background);
 	padding: 12px;
+	&.scrollable {
+		border: 1px solid var(--large-card-border-color);
+		border-radius: var(--primary-border-radius);
+		overflow: scroll;
+	}
 }
 
 .footer {
