--- a/src/app/components/interaction-card-content/interaction-card-content.component.html
+++ b/src/app/components/interaction-card-content/interaction-card-content.component.html
@@ -1,4 +1,4 @@
-<ng-template #template>
+<ng-template #content>
 	<span>{{ interaction().type }}</span>
 	<span>{{ interaction().date | date }}</span>
 
@@ -10,4 +10,10 @@
 			<mat-chip (click)="onTopicClick(topic)">{{topic.topic}}</mat-chip>
 		}
 	</mat-chip-set>
+</ng-template>
+
+<ng-template #topicNotes>
+	<h3>{{selectedTopic()?.topic}}</h3>
+	<p [innerHTML]="selectedTopic()?.notes"></p>
+	<button (click)="onCloseTopicClick()" class="close-topic" mat-icon-button><mat-icon>close</mat-icon></button>
 </ng-template>
