use pipe to convert newlines to <br />
- NewlinesToBrPipe was a cleaner solution than MiscMapperService
- Created mixin to limit lines of text.

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -8,7 +8,7 @@
 	@if (collapsedLeftText() || collapsedRightText()) {
 		<div class="collapsed-header">
 			<span class="collapsed-left-text" [class.hidden]="open() && !alwaysShowLeftText()" [ngStyle]="open() ? {width: 'auto'} : {}">{{collapsedLeftText()}}</span>
-			<span class="collapsed-right-text" [class.hidden]="open()">{{collapsedRightText()}}</span>
+			<span class="collapsed-right-text" [class.hidden]="open()" [innerHTML]="collapsedRightText()"></span>
 		</div>
 	}
 
