--- a/src/app/components/interaction-dialog/interaction-dialog.component.html
+++ b/src/app/components/interaction-dialog/interaction-dialog.component.html
@@ -59,47 +59,27 @@
 		<section class="topics" aria-labelledby="topics-title">
 			<h2 id="topics-title">Topics Discussed</h2>
 
-			@for (topic of form.controls.topicsDiscussed.controls; track topic; let index = $index) {
-				<app-card
-					[collapsed-left-text]="topic.value.topic!"
-					[collapsed-right-text]="topic.value.notes | newlinesToBr"
-					always-show-left-text
-					(edit-topic)="onEditTopicClick(index)"
-					(delete-topic)="onDeleteTopicClick(index)"
-					[open]="false"
-					collapsible
-					scrollable-body
-					hide-footer
-				>
-					<span [innerHTML]="topic.value.notes | newlinesToBr"></span>
-				</app-card>
-			}
+			<button class="add-topic" (click)="onAddTopicClick()" mat-button type="button">Add Topic</button>
 
-			<div class="topic-card" [formGroup]="topicForm">
-
-				<mat-form-field hintLabel="What topic did you discuss?" appearance="outline" floatLabel="auto">
-					<mat-label>Topic</mat-label>
-					<input #topicNameInput matInput formControlName="topic" required>
-					@if (topicForm.hasError('required')) {
-						<mat-error>Topic is required</mat-error>
-					}
-				</mat-form-field>
-
-				@if (topicForm.value.topic || topicForm.value.notes) {
-					<button (click)="onCancelTopicClick()" class="cancel-edit" mat-button aria-label="Cancel editing topic" type="button">
-						{{isEditTopicForm() ? 'Cancel' : 'Clear'}}
-					</button>
+			@if (form.controls.topicsDiscussed.length) {
+				@for (topic of form.controls.topicsDiscussed.controls; track topic; let index = $index) {
+					<app-card
+						[collapsed-left-text]="topic.value.topic!"
+						[collapsed-right-text]="topic.value.notes | newlinesToBr"
+						always-show-left-text
+						(edit-topic)="onEditTopicClick(index)"
+						(delete-topic)="onDeleteTopicClick(topic.value.topic!, index)"
+						[open]="false"
+						collapsible
+						scrollable-body
+						hide-footer
+					>
+						<span [innerHTML]="topic.value.notes | newlinesToBr"></span>
+					</app-card>
 				}
-				<button (click)="onSaveTopicClick()" class="save-topic" mat-button aria-label="Save Topic" type="button">
-					{{isAddTopicForm() ? 'Add' : 'Save'}} Topic
-				</button>
-
-				<mat-form-field hintLabel="What do you want to remember about this topic?" appearance="outline" floatLabel="auto">
-					<mat-label>Notes</mat-label>
-					<textarea matInput formControlName="notes" rows="5"></textarea>
-				</mat-form-field>
-
-			</div>
+			} @else {
+				Once you add a topic, it will appear here along with any notes you've written.
+			}
 		</section>
 
 	</form>
