highlight new/editied relationship/interaction cards
After saving a new or edited relationship or interaction,
the page scrolls to the relationship or interaction card
and the card blinks twice to show what was just updated.
Also, relationship sorting algorithm fixed. It now
properly expects relationship array arguments to be
sorted ascending by daysUntilAttentionNeeded instead of
descending.

--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -24,6 +24,32 @@
 		padding-top: 0;
 		padding-bottom: 0;
 	}
+
+	&.highlight {
+		animation: 0.25s 1.25s 4 highlight-border alternate;
+	}
+	&.highlight .header,
+	&.highlight .header > * {
+		animation: 0.25s 1.25s 4 highlight alternate;
+	}
+	@keyframes highlight {
+		from {
+			background: var(--header-background-color);
+			color: var(--primary-title-color);
+		}
+		to {
+			background: var(--primary-title-color);
+			color: var(--header-background-color);
+		}
+	}
+	@keyframes highlight-border {
+		from {
+			border-color: var(--header-background-color);
+		}
+		to {
+			border-color: var(--primary-title-color);
+		}
+	}
 }
 
 .header {
