--- a/src/styles.scss
+++ b/src/styles.scss
@@ -81,11 +81,18 @@ mat-form-field .mdc-text-field--outlined .mat-mdc-form-field-infix:has(select) {
 	padding: 0;
 }
 
+// background for various Angular Material components that matches app theme
 .custom-mat-panel {
 	background: var(--card-background) !important;
 	border: 1px solid var(--header-background-color);
 }
 
+// increase overlay darkness for modals, to elminate confusion when multiple modals are open
+.cdk-overlay-dark-backdrop {
+	background: rgba(0, 0, 0, 0.55);
+}
+
+// applied to all scrollbars to match app theme colors
 .custom-scrollbar {
 	&::-webkit-scrollbar {
 		background: var(--scrollbar-track-color);
