--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,7 +23,9 @@
 	--page-title-font-size-small: 1.05rem;
 	--page-title-font-size-large: 2rem;
 	--page-small-header-bar-height: 56px;
+	--page-small-header-bar-height-with-search: 112px;
 	--page-large-header-bar-height: 64px;
+	--page-large-header-bar-height-with-search: 128px;
 
 	--header-background-color: #101833;
 	--header-hover-color: #152558;
