--- a/src/app/pages/relationships-list/relationships-list.component.html
+++ b/src/app/pages/relationships-list/relationships-list.component.html
@@ -1,15 +1,12 @@
-<app-page-header-bar title="Relationships">
-	<mat-form-field subscriptSizing="dynamic" appearance="outline">
-		<input [(ngModel)]="searchValue" (focus)="searchValue.set('')" placeholder="Search" aria-label="Search relationships" [matAutocomplete]="autocomplete" matInput type="search" />
-	</mat-form-field>
-
-	<mat-autocomplete [class]="['custom-mat-panel', 'custom-scrollbar']" #autocomplete="matAutocomplete" [hideSingleSelectionIndicator]="true">
-		@for (name of filteredNames(); track name) {
-			<mat-option [value]="name">{{name}}</mat-option>
-		}
-	</mat-autocomplete>
-
+<app-page-header-bar title="Relationships" [second-row-template]="search" [show-second-row]="showSearchBar()">
+	<ng-container #firstRow></ng-container>
 	<a routerLink="/interactions" mat-button>Interactions</a>
+
+
+
+	<button class="toggle-search" (click)="onSearchClick()" mat-icon-button aria-label="Search relationships">
+		<mat-icon>search</mat-icon>
+	</button>
 
 	<button [matMenuTriggerFor]="menu" mat-icon-button aria-label="More actions menu">
 		<mat-icon>more_vert</mat-icon>
@@ -34,7 +31,6 @@
 		}
 	</mat-menu>
 </app-page-header-bar>
-
 
 @if (hasRelationships()) {
 	<p>
@@ -75,3 +71,19 @@
 		}
 	}
 }
+
+<ng-template #search>
+	<mat-form-field class="search" subscriptSizing="dynamic" appearance="outline">
+		<input [(ngModel)]="searchValue" onfocus="this.select()" placeholder="Search" aria-label="Search relationships" [matAutocomplete]="autocomplete" matInput type="search" />
+	</mat-form-field>
+
+	<mat-autocomplete [class]="['custom-mat-panel', 'custom-scrollbar']" #autocomplete="matAutocomplete" [hideSingleSelectionIndicator]="true">
+		@for (name of filteredNames(); track name) {
+			<mat-option [value]="name">{{name}}</mat-option>
+		}
+	</mat-autocomplete>
+
+	<button class="close-search" (click)="onSearchClick(false)" mat-icon-button aria-label="Close search" type="button">
+		<mat-icon>close</mat-icon>
+	</button>
+</ng-template>
