--- a/src/app/pages/relationships-list/relationships-list.component.scss
+++ b/src/app/pages/relationships-list/relationships-list.component.scss
@@ -7,16 +7,32 @@
 	margin: 0 auto;
 	@media screen and (min-width: $small-breakpoint) {
 		padding: calc(var(--page-large-header-bar-height) + 12px) 12px 0;
+		button.toggle-search {
+			display: none;
+		}
+	}
+	&.two-header-rows {
+		padding-top: calc(var(--page-small-header-bar-height-with-search));
+		@media screen and (min-width: $small-breakpoint) {
+			padding-top: calc(var(--page-large-header-bar-height-with-search) + 12px);
+		}
 	}
 }
 
 app-page-header-bar {
-	mat-form-field ::ng-deep .mat-mdc-form-field-infix {
+	mat-form-field.search ::ng-deep .mat-mdc-form-field-infix {
 		display: flex;
 		min-height: auto;
 	}
+	button.close-search {
+		flex: none;
+		@media screen and (min-width: $small-breakpoint) {
+			display: none;
+		}
+	}
 	@media screen and (max-width: $small-breakpoint) {
-		mat-form-field {
+		mat-form-field.search {
+			flex: 1;
 			height: 100%;
 			::ng-deep .mat-mdc-text-field-wrapper {
 				height: 100%;
