--- a/src/app/components/card-group/card-group.component.scss
+++ b/src/app/components/card-group/card-group.component.scss
@@ -1,6 +1,7 @@
 @import '../../../styles/variables.scss';
 
 :host {
+	position: relative;
 	display: block;
 	border: 1px solid var(--header-background-color);
 	border-radius: var(--primary-border-radius);
@@ -39,7 +40,7 @@
 			}
 		}
 	}
-	.card-scroll {
+	.cards {
 		display: flex;
 		flex-direction: column;
 		align-items: stretch;
@@ -63,6 +64,46 @@
 			flex-direction: row;
 			overflow-x: auto;
 			padding: 16px 12px 16px;
+		}
+	}
+
+	button.scroll {
+		position: absolute;
+		top: 49px;
+		bottom: 0;
+
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		width: 20px;
+
+		background: #3b82f640;
+		color: var(--primary-accent-color);
+		padding: 0;
+		border: none;
+		cursor: pointer;
+		z-index: 1;
+
+		&.left {
+			left: 0;
+		}
+		&.right {
+			right: 0;
+		}
+		&.hidden {
+			display: none;
+		}
+		&:hover {
+			background: rgba(59, 130, 246, 0.65);
+			color: var(--header-background-color);
+			mat-icon.mat-icon {
+				color: black;
+			}
+		}
+
+		mat-icon.mat-icon {
+			font-weight: bold;
+			overflow: visible;
 		}
 	}
 }
