fix title input property conflict w/title attribute
It was causing an undesired hover effect on
page header bars.

--- a/src/app/pages/interactions-list/interactions-list.component.html
+++ b/src/app/pages/interactions-list/interactions-list.component.html
@@ -1,4 +1,4 @@
-<app-page-header-bar title="Interactions">
+<app-page-header-bar page-title="Interactions">
 	<a routerLink="/relationships" mat-button>Relationships</a>
 
 	<button [matMenuTriggerFor]="menu" mat-icon-button aria-label="More actions menu">
