add tooltips to icon buttons

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,6 +1,6 @@
 <div class="header">
 	@if (relationshipName()) {
-		<button class="name" (click)="onEditClick()" [class.hidden]="!open()" mat-button>{{relationshipName()}}</button>
+		<button class="name" (click)="onEditClick()" [class.hidden]="!open()" [matTooltip]="'Edit ' + modelName()" mat-button>{{relationshipName()}}</button>
 	}
 	@if (alwaysShowLeftText()) {
 		<span class="spacer" [class.hidden]="!open()"></span>
@@ -12,14 +12,14 @@
 		</div>
 	}
 
-	<button class="edit" (click)="onEditClick()" [class.hidden]="!open()" mat-icon-button [attr.aria-label]="'Edit ' + modelName()" type="button">
+	<button class="edit" (click)="onEditClick()" [class.hidden]="!open()" [matTooltip]="'Edit ' + modelName()" mat-icon-button [attr.aria-label]="'Edit ' + modelName()" type="button">
 		<mat-icon>edit</mat-icon>
 	</button>
-	<button class="delete" (click)="onDeleteClick()" [class.hidden]="!open()" mat-icon-button [attr.aria-label]="'Delete ' + modelName()" type="button">
+	<button class="delete" (click)="onDeleteClick()" [class.hidden]="!open()" [matTooltip]="'Delete ' + modelName()" mat-icon-button [attr.aria-label]="'Delete ' + modelName()" type="button">
 		<mat-icon>delete</mat-icon>
 	</button>
 	@if (collapsible()) {
-		<button class="collapse-expand" (click)="onCollapseExpandClick()" mat-icon-button [attr.aria-label]="(open() ? 'Collapse' : 'Expand') + ' card'" type="button">
+		<button class="collapse-expand" (click)="onCollapseExpandClick()" [matTooltip]="open() ? 'Collapse ' + modelName() : 'Expand ' + modelName()" mat-icon-button [attr.aria-label]="(open() ? 'Collapse' : 'Expand') + ' card'" type="button">
 			<mat-icon [class.open]="open()">chevron_right</mat-icon>
 		</button>
 	}
