--- a/src/app/pages/interactions-list/interactions-list.component.html
+++ b/src/app/pages/interactions-list/interactions-list.component.html
@@ -1,7 +1,7 @@
 <app-page-header-bar page-title="Interactions">
 	<a routerLink="/relationships" mat-button>Relationships</a>
 
-	<button [matMenuTriggerFor]="menu" mat-icon-button aria-label="More actions menu">
+	<button [matMenuTriggerFor]="menu" matTooltip="More actions" mat-icon-button aria-label="More actions menu">
 		<mat-icon>more_vert</mat-icon>
 	</button>
 
