--- a/src/app/pages/relationships-list/relationships-list.component.html
+++ b/src/app/pages/relationships-list/relationships-list.component.html
@@ -6,7 +6,7 @@
 		<mat-icon>search</mat-icon>
 	</button>
 
-	<button [matMenuTriggerFor]="menu" mat-icon-button aria-label="More actions menu">
+	<button [matMenuTriggerFor]="menu" mat-icon-button matTooltip="More actions" aria-label="More actions menu">
 		<mat-icon>more_vert</mat-icon>
 	</button>
 
