componetize horizontal scroll buttons

--- a/src/app/components/card-group/card-group.component.html
+++ b/src/app/components/card-group/card-group.component.html
@@ -10,10 +10,4 @@
 	<ng-content />
 </div>
 
-<button (click)="onScrollButtonClick('left')" class="scroll left" [class.hidden]="hideLeftScrollButton()" matTooltip="Scroll left" matTooltipPosition="right" aria-label="Scroll group left">
-	<mat-icon>chevron_left</mat-icon>
-</button>
-
-<button (click)="onScrollButtonClick('right')" class="scroll right" [class.hidden]="hideRightScrollButton()" matTooltip="Scroll right" matTooltipPosition="left" aria-label="Scroll group right">
-	<mat-icon>chevron_right</mat-icon>
-</button>
+<app-horizontal-scroll-buttons [scrollableElement]="cards" [hide-buttons]="isSmallViewport() || !open()" />
