--- a/src/app/components/interaction-card-content/interaction-card-content.component.html
+++ b/src/app/components/interaction-card-content/interaction-card-content.component.html
@@ -3,13 +3,16 @@
 	<span>{{ interaction().date | date }}</span>
 
 	@if (interaction().topicsDiscussed.length) {
-		<span class="topics-title">Topics Discussed</span>
+		<div class="topics">
+			<div class="topics-title">Topics Discussed</div>
+			<div class="topic-buttons" #topics>
+				@for (topic of interaction().topicsDiscussed; track topic.topic) {
+					<button class="topic" (click)="onTopicClick(topic)" mat-stroked-button>{{topic.topic}}</button>
+				}
+			</div>
+			<app-horizontal-scroll-buttons [scrollableElement]="topics" [scroll-amount-px]="200" [button-top-px]="19" [button-x-px]="-12" [button-bottom-px]="-19" no-opacity />
+		</div>
 	}
-	<mat-chip-set aria-label="Topic selection">
-		@for (topic of interaction().topicsDiscussed; track topic.topic) {
-			<mat-chip (click)="onTopicClick(topic)">{{topic.topic}}</mat-chip>
-		}
-	</mat-chip-set>
 </ng-template>
 
 <ng-template #topicNotes>
