--- a/src/app/components/interaction-card-content/interaction-card-content.component.scss
+++ b/src/app/components/interaction-card-content/interaction-card-content.component.scss
@@ -1,3 +1,9 @@
+.interaction-type {
+	display: flex;
+	align-items: center;
+	gap: 8px;
+}
+
 .topics {
 	grid-column-start: 1;
 	grid-column-end: -1;
