--- a/src/app/components/relationship-dialog/relationship-dialog.component.html
+++ b/src/app/components/relationship-dialog/relationship-dialog.component.html
@@ -69,6 +69,7 @@
 					collapsible
 					[collapsed-left-text]="(interaction.date | date:'mediumDate')!"
 					[collapsed-right-text]="interaction.topicsDiscussed[0]?.notes | newlinesToBr"
+					[collapsed-right-icon]="interaction.typeIcon"
 					[open]="false"
 				>
 					<app-interaction-card-content [interaction]="interaction" />
